# napari-z-plotter

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: publish.yml
src/napari_z_plotter/: __init__.py  _widget.py  napari.yaml
